finish java rest framework
