# openapi/java-rest/src/main/java/org/apache/iotdb/openapi/gen/handler/impl/PingApiServiceImpl.java
@@ -17,30 +17,19 @@
 
 // this file is generated by openapi generator
 
-package org.apache.iotdb.openapi.gen.handler;
+package org.apache.iotdb.openapi.gen.handler.impl;
 
-import io.swagger.jaxrs.config.SwaggerContextService;
-import io.swagger.models.*;
+import javax.ws.rs.core.Response;
+import javax.ws.rs.core.SecurityContext;
+import org.apache.iotdb.openapi.gen.handler.ApiResponseMessage;
+import org.apache.iotdb.openapi.gen.handler.NotFoundException;
+import org.apache.iotdb.openapi.gen.handler.PingApiService;
 
-import javax.servlet.http.HttpServlet;
-import javax.servlet.ServletConfig;
-import javax.servlet.ServletException;
-
-public class Bootstrap extends HttpServlet {
-  @Override
-  public void init(ServletConfig config) throws ServletException {
-    Info info = new Info()
-      .title("OpenAPI Server")
-      .description("IoTDB Rest API for Grafana, Prometheus, etc..")
-      .termsOfService("")
-      .contact(new Contact()
-        .email(""))
-      .license(new License()
-        .name("Apache 2.0")
-        .url("http://unlicense.org"));
-
-    Swagger swagger = new Swagger().info(info);
-
-    new SwaggerContextService().withServletConfig(config).updateSwagger(swagger);
-  }
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2021-01-14T20:28:23.313+08:00[Asia/Shanghai]")
+public class PingApiServiceImpl extends PingApiService {
+    @Override
+    public Response tryPing(SecurityContext securityContext) throws NotFoundException {
+        // do some magic!
+        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    }
 }
